Enhance popup UI with application icon and update placeholder texts

--- a/popup.html
+++ b/popup.html
@@ -7,16 +7,18 @@
   <link rel="stylesheet" href="styles/popup.css">
 </head>
 <body>
-  <h1>LinkedIn Auto-Responder</h1>
+
+  <img src="icons/icon-32.png" height="32" width="32" alt="IA"/>
 
   <div class="section">
     <div class="label">From</div>
-    <textarea id="incomingMeta" readonly placeholder="Message meta (e.g., sender, time)..."></textarea>
+    <label for="incomingMeta">
+    </label><textarea id="incomingMeta" readonly placeholder="Message sender, time."></textarea>
   </div>
 
   <div class="section">
     <div class="label">Message</div>
-    <textarea id="incomingContent" readonly placeholder="Open a LinkedIn conversation..."></textarea>
+    <textarea id="incomingContent" readonly placeholder="Message..."></textarea>
   </div>
 
   <div class="section">
