Refine popup layout: adjust width, add title line styling, and improve "From" section design

--- a/popup.html
+++ b/popup.html
@@ -8,19 +8,16 @@
 </head>
 <body>
 
-  <img src="icons/icon-32.png" height="32" width="32" alt="IA"/>
-
-
-  <div class="section">
-    <div class="label">From</div>
+  <div class="row title-line">
+    <img src="icons/icon-32.png" height="32" width="32" alt="IA"/>
+    <span class="label-inline">From</span>
     <input type="text" id="incomingMeta" readonly placeholder="Message sender, time." />
   </div>
 
   <div class="section">
-    <div class="label">Message</div>
     <textarea id="incomingContent" readonly placeholder="Message..."></textarea>
   </div>
-
+  <hr/>
   <div class="section">
     <div class="label">Reply</div>
     <div class="row" style="margin-bottom:6px; align-items:center;">
