Replace "Insert" button with dropdown for template selection in popup UI

--- a/popup.html
+++ b/popup.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
   <meta charset="utf-8" />
   <title>LinkedIn Auto-Responder</title>
@@ -24,7 +24,6 @@
       <select id="templateSelect">
         <option value="">Choose template…</option>
       </select>
-      <button id="insertTemplate">Insert</button>
     </div>
     <textarea id="reply"></textarea>
     <div class="small" id="ruleNote"></div>
